--- a/openshift/OCP4_WKSP_BASE_RHODS_ON_ARO/description.html
+++ b/openshift/OCP4_WKSP_BASE_RHODS_ON_ARO/description.html
@@ -1,14 +1,1 @@
-<p>This workshop is intended to give you a hands on introduction to using OpenShift from the perspective of a developer. For developers looking to kickstart their projects, OpenShift enables efficient application development through streamlined workflows and validated integrations.</p>
-<p>A sample lab guide can be found here:<br /><a href="https://openshift-labs.github.io/starter-guides-html/" target="_blank">https://openshift-labs.github.io/starter-guides-html/</a></p>
-<p>There are 4 programming language variants of the workshop:</p>
-<ul>
-<li>Java</li>
-<li>Node.js</li>
-<li>Python</li>
-<li>.NET</li>
-</ul>
-<p>When provisioning completes, look for the email that you get from RHPDS, and take note of the Homeroom URL. Lab content is under <strong>labs</strong> project, then share homeroom <strong>Route</strong> URL with your attendees. When accessed, they will need to provide a username and password. Available usernames correspond to the number of users requested when you ordered the environment:<br /><br /><strong>Usernames:</strong>&nbsp;user1 .. userN<br /><strong>Password:</strong>&nbsp;openshift<br /><br />If a user totally hoses their environment, they can log out and then choose a different user by clicking the menu in the upper right corner of the Homeroom interface. They can also clear cookies.</p>
-<p><strong>Provisioning time</strong>: ~75 min</p>
-<p>This Lab is accompanied by these <a href="https://docs.google.com/presentation/d/1YYfWptUbyCwEfhDxVsVMJ9igNKek3NEX_ynFBVPcbVM/edit?usp=sharing" target="_blank">Slides</a></p>
-<p> If you get any issue or error, please check our <a href="https://docs.google.com/document/d/1kNE7OW9kvnbYrfknsHIIWsUOPhWNbzeZKHcXS25DgMM/edit#heading=h.inf51xbvd9mg" target="_blank">Troubleshooting guide</a></p>
-<p>Source code, issues tracking and further documentation is available <a href="https://github.com/openshift-labs/starter-guides/" target="_blank">here</a>&nbsp;</p>
+<p>Base RHODS environment on ARO (Azure Red Hat OpenShift)</p>
